--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,12 +1,21 @@
-.product{
+.product {
     display: flex;
     border-bottom: 1px solid lightgrey;
     margin-bottom: 5px;
-    padding-bottom: 5px;
-    margin-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-left: 30px;
 }
-.product-name{
+
+.product-name {
     color: royalblue;
     font-weight: 500;
-    
+}
+
+.main-btn {
+    background: rgb(243, 220, 9);
+    height: 30px;
+    width: 150px;
+    border-radius: 5px;
+    border: 1px solid grey;
 }
