--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,9 +1,14 @@
+
 .shop-container{
     display: flex;
+    width: 90%;
+    margin-left:auto;
+    margin-right:auto;
+
 }
 .product-container{
-    width:70%;
-    margin-left: 20px;
+    width:80%;
+    margin-left: 5px;
     margin-right: 5px;
     border-right: 1px solid lightgrey;
 
