--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -2,3 +2,16 @@ p{
     font-weight: 500;
     color:rgb(36, 35, 35);
 }
+h3{
+    margin-left: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid lightgrey;
+}
+.order-summary{
+    display: flex;
+    margin-left: 10px;
+}
+
+.info{
+    margin-right: 20px;
+}
