--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -4,7 +4,7 @@
     margin-bottom: 5px;
     padding-bottom: 10px;
     padding-top: 10px;
-    margin-left: 30px;
+    /* margin-left: 30px; */
 }
 
 .product-name {
@@ -13,10 +13,17 @@
 }
 
 .main-btn {
-    background: rgb(243, 220, 9);
+    background: rgb(236, 179, 34);
     height: 30px;
     width: 150px;
     border-radius: 5px;
     border: 1px solid grey;
     
+}
+.product-info{
+    margin-right: 10px;
+}
+
+.image{
+    margin-right: 20px;
 }
